[package]
name = "astrid-capsule-react"
version = "0.1.0"
edition = "2024"
description = "ReAct loop capsule: stateless coordinator for LLM reasoning and tool execution"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.5.3", features = ["derive"] }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v4", "serde", "rng-getrandom"] }


[profile.release]
codegen-units = 1
lto = true
strip = true
